# clipnote-desktop

./: .env.example  .gitignore  CHANGELOG.md  README.md  findings.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/: globals.css  layout.tsx
app/(public)/: home.module.css  page.tsx
app/(public)/apply/: apply.module.css  page.tsx
app/(public)/diagnosis/: diagnosis-client.tsx  diagnosis.module.css  page.tsx
app/api/diagnosis/: route.ts
app/studio/[day]/: page.tsx
app/studio/day-1/: page.tsx
browser-extension/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
components/brand/: editorial-link.tsx  issue-strip.tsx  masthead.test.tsx  masthead.tsx
components/motion/: reveal.tsx
components/publication/: work-spread.tsx
docs/plans/: foundation-vertical-slice.md
docs/product/: wei-ding-gao-design.md
docs/superpowers/plans/: 2026-07-14-clipnote-v0.1-shell.md  2026-07-14-wei-ding-gao-foundation-vertical-slice.md
docs/superpowers/specs/: 2026-07-14-clipnote-ai-design.md  2026-07-14-wei-ding-gao-design.md
docs/superpowers/verification/: 2026-07-14-v0.1-shell.md
features/application/: application-flow.ts  application-interview.tsx  application-session.test.ts  application-session.ts  application.schema.ts  application.test.ts  application.types.ts  interview-step.tsx  progress-folio.tsx
features/diagnosis/: create-diagnosis.test.ts  create-diagnosis.ts  demo-diagnosis-provider.ts  diagnosis-provider.ts  diagnosis-session.test.ts  diagnosis-session.ts  diagnosis-sheet.tsx  diagnosis.schema.ts  openai-diagnosis-provider.ts
features/publication/: issue-001.ts  publication-issue.tsx
features/studio/: boundary-editor.tsx  day-one-brief.ts  journey-content.ts  journey-day-form.tsx  journey-session.test.ts  journey-session.ts  journey-studio.tsx  margin-note.tsx  studio-session.test.ts  studio-session.ts
lib/: env.ts  result.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_pets.rs  backup.rs  data.rs  lib.rs  main.rs  pets.rs  process_tools.rs  shortcuts.rs  tray.rs  window.rs
src-tauri/src/vault/: browser.rs  clipboard.rs  crypto.rs  import.rs  mod.rs  store.rs
src/app/: App.test.tsx  App.tsx  fixtures.ts
src/bridge/: desktopBridge.test.ts  desktopBridge.ts
src/components/: AppMark.tsx  IconButton.test.tsx  IconButton.tsx  Kbd.tsx  StatusDot.tsx
src/features/notes/: NotesPanel.test.tsx  NotesPanel.tsx  StickyNoteWindow.tsx  stickyWindowRoute.test.ts  (+1 more)
src/styles/: components.css  global.css  shell.css  tokens.css
src/test/: data.ts
src/types/: content.ts
styles/: editorial.module.css  publication.module.css  studio.module.css
tests/e2e/: application.spec.ts  editorial-shell.spec.ts  home.spec.ts  journey-full.spec.ts  journey-visual.spec.ts  publication.spec.ts  studio.spec.ts
(+18 files in other folders)
