[package]
name = "clipnote"
version = "0.2.0"
description = "A docked Windows clipboard and notes workspace"
authors = ["chuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
image = { version = "0.25.10", default-features = false, features = ["webp"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_DataExchange"] }
