[package]
name = "clipnote"
version = "0.3.1"
description = "A docked Windows clipboard and notes workspace"
authors = ["chuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
csv = "1.3"
getrandom = "0.3.4"
image = { version = "0.25.10", default-features = false, features = ["png", "webp"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["backup", "bundled"] }
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tiny_http = "0.12"
zeroize = "1.8.2"
url = "2"
webbrowser = "1"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
